<resources>
    <string name="app_name">Simple Paint</string>

    <string name="menu_new">New</string>
    <string name="menu_mypaintings">My Paintings</string>
    <string name="menu_about">About</string>
    <string name="menu_rate">Rate App</string>
    <string name="menu_exit">Exit</string>

    <string name="about_simplepaint">This mobile application designed and coded by Emre Baran. Some icons and graphs have CC-BY License. Some of them are free for personal and commercial use. And a few of them are designed by Emre Baran.</string>
    <string name="about_title_special_thanks">Special Thanks</string>
    <string name="about_special_thanks">Sue Smith : Thank you for drawing app example.\nKristiyan Petrov: Thank you for color picker library.\nAynur Gündoğan : Thank you for beta testing and sharing your ideas.</string>
    <string name="about_title_application">About Application</string>
    <string name="about_application">This application is open-source software. You can find the source codes on GitHub: mree58 \nFeel free to contact if you have any ideas or problems with application. Mail: emrebaran.ceng@gmail.com</string>
    <string name="about_title_permissions">About Permissions</string>
    <string name="about_permissions">WRITE_EXTERNAL_STORAGE: for saving your paintings \nREAD_EXTERNAL_STORAGE: for showing you to your paintings</string>
    <string name="about_application_version">Application Version: 1.2.0</string>
    <string name="about_supported_languages">Supported Languages: English, Türkçe</string>

    <string name="app_exit">Press Again To Exit</string>


    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="paint_new">Are you sure you want to start new paint ?</string>
    <string name="paint_save">Do you want to save this painting ?</string>
    <string name="saved">Saved !</string>

    <string name="gallery_delete">Are you sure you want to delete this painting ?</string>
    <string name="deleted">Deleted !</string>

    <string name="colorpicker_dialog_cancel">CANCEL</string>
    <string name="colorpicker_dialog_ok">OK</string>

    <string name="brush1">Normal</string>
    <string name="brush2">Shadow</string>
    <string name="brush3">Blur</string>
    <string name="brush4">Emboss</string>

</resources>
