<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical" >


	<RadioGroup
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="5dp"
		android:id="@+id/rdBrush"
		android:gravity="left"
		android:layout_weight="1" >

		<RadioButton
			android:text="@string/brush1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/radioNormal"
			android:layout_weight="1" />

		<RadioButton
			android:text="@string/brush2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/radioShadow"
			android:layout_weight="1" />

		<RadioButton
			android:text="@string/brush3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/radioBlur"
			android:layout_weight="1" />

		<RadioButton
			android:text="@string/brush4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/radioEmboss"
			android:layout_weight="1" />


	</RadioGroup>


</LinearLayout>